# MillionTrees

./: .bumpversion.cfg  .comet.config  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .style.yapf  AGENTS.md  DOME_DETR_INTEGRATION.md  DeepForest.py  HIPERGATOR_TESTING.md  MANIFEST.in  PULL_REQUEST.md  README.md  README_visualization.md  agents.md  azure-pipelines.yaml  dataset_release_report.md  deepforest_config.yml  format_unsupervised.sh  generate_dataset_report.py  neon_token.txt  pyproject.toml  requirements.txt  setup.py  submit_DeepForest.sh  submit_package_datasets.sh  submit_test_release.sh  test_hipergator_scripts.py  test_visualization.py  visualize_all_datasets.py  visualize_datasets_concise.py  visualize_release_annotations.py  weak_supervision_pretraining.md  weak_supervision_pretraining_table.md  zip_tmp.py
.github/: copilot-instructions.md
.github/workflows/: .readthedocs.yml  python-neon-download.yml  python-package.yml  python-publish.yml
data-mini/TreePoints_v0.8/: random.csv
data_prep/: Alejandro_Chile.py  Allen2025.py  Araujo_2020.py  ArcGISRestServer.py  AutoArborist.py  BCI.py  Beloiu2023.py  BohlmanBCI.py  CHM.py  Cloutier2023.py  DeepTrees_Halle.py  DetectTree2.py  Dumortier2025.py  Firoze2023.py  ForestGEO.py  Frey2026.py  HF_token  Harz_Mountain.py  HemmingSchroeder.py  Hickman2021.py  Jansen2023.py  KagglePalm.py  Kaggle_LiDAR_RGB.py  Kattenborn_NewZealand.py  Krkonose_BileLabe.py  MultiTemporal_NEON.py  NEON_mining.py  NEON_points.py  NEON_trees.py  NeonBenchmark.py  NeonTreeEvaluation.py  NeonTreeEvaluation_utilities.py  OAM_TCD.py  OFO_IMPLEMENTATION_README.md  OSBS_megaplot.py  OliveTrees_spain.py  OpenForestObservatory.py  PULL_REQUEST_SUMMARY.md  Paracou_Ball.py  Puliti_2022.py  (+66 more)
data_prep/AutoArborist/: AutoArborist_summary.md  calgary_annotations.csv
data_prep/OpenForestObservatory/: mission_001_annotations.csv
data_prep/annotations/: TreeBoxes_annotations_20250306_095830.csv  TreeBoxes_annotations_20250311_112630.csv  TreeBoxes_annotations_20250317_074858.csv  TreeBoxes_annotations_20250401_074219.csv  TreeBoxes_annotations_20250403_124742.csv  TreeBoxes_annotations_20250414_074551.csv  TreeBoxes_annotations_20250424_214411.csv  TreeBoxes_annotations_20250427_195808.csv  TreeBoxes_annotations_20250429_154729.csv  TreeBoxes_annotations_20250519_131533.csv  TreeBoxes_annotations_20250530_110756.csv  TreePoints_annotations_20250306_100233.csv  TreePoints_annotations_20250311_113348.csv  TreePoints_annotations_20250317_075555.csv  TreePoints_annotations_20250401_075053.csv  TreePoints_annotations_20250403_125752.csv  TreePoints_annotations_20250414_075246.csv  TreePoints_annotations_20250424_215545.csv  TreePoints_annotations_20250427_201333.csv  TreePoints_annotations_20250429_155648.csv  TreePoints_annotations_20250519_132347.csv  TreePoints_annotations_20250530_111206.csv  TreePolygons_NEON_combined_crowns_TEMPLATE.csv
data_prep/tree_locations/: BloomingtonTrees.csv  BloomingtonTrees_test.csv  BloomingtonTrees_train.csv  BoulderTrees_test.csv  BoulderTrees_train.csv  BuffaloTrees_test.csv  CalgaryTrees_sample.csv  CupertinoTrees.csv  (+19 more)
docs/: CNAME  Contributing.md  Dataset_Structure.md  Datasets.md  Gaungzhou2022.py  Leaderboard.md  combined_results_table.txt  conf.py  contributing.md  contributing.rst  create_leaderboard_visualizations.py  dataset_release_report.md  dataset_structure.md  datasets.md  developer.md  evaluation.md  getting_started.md  index.md  index.rst  landing.rst  leaderboard.md  repository_structure.md  requirements.txt  submission_guidelines.md  training.md
examples/: Datasets.ipynb  DeepForest.py  inspect.ipynb
existing_models/: external_segmentation_adapter.py
existing_models/canopyrs/: README.md  build_env.sh  detrex.toml  eval_boxes.py  eval_polygons.py  pyproject.toml
existing_models/deepforest/: eval_boxes.py  eval_points.py  eval_polygons.py  pyproject.toml
existing_models/detectree2/: .gitignore  README.md  eval_polygons.py  pyproject.toml
existing_models/sam3/: eval_boxes.py  eval_points.py  eval_polygons.py  pyproject.toml
existing_models/treeformer/: density_panel.py  eval_points.py  pyproject.toml  visualize_density.py
existing_models/treeformer_sam3/: eval_polygons_crossgeometry.py  pyproject.toml
existing_models/treeformer_sam3/outputs/crossgeometry/: results_polygons_crossgeometry.json  results_polygons_crossgeometry.txt
logs/: mt-examples_15263754_1.out  mt-examples_15265760_0.err  mt-examples_15268472_4294967294.err  mt-examples_15268472_4294967294.out  mt-examples_16366223_0.err  mt-examples_16366223_0.out  mt-examples_16366223_1.err  mt-examples_16447740_4294967294.err  mt-examples_16448167_4294967294.err  mt-examples_16579725_4294967294.err  mt-examples_17006447_4294967294.err  mt-examples_17613712_4294967294.err  mt-examples_17635225_4294967294.err  mt-examples_17635225_4294967294.out
milliontrees/: __init__.py  download_datasets.py  get_dataset.py  version.py
scripts/: create_finetuned_visualizations.py  make_annotation_examples_figure.py  make_benchmark_table.py  make_completeness_figure.py  make_weak_supervision_report.py  profile_polygon_eval.py  run_examples.py  visualize_tls_lidar_ortho_crown_panel.py
slurm/: df_boxes.sbatch  df_points.sbatch  df_polygons.sbatch  df_treeformer_points.sbatch  eval_all.sbatch  filter_auto_arborist_tcd.sbatch  run_benchmark.sbatch  run_examples.sbatch  sam3_boxes.sbatch  sam3_points.sbatch  sam3_polygons.sbatch  submit_all.sh  submit_neon_unsupervised.sh  submit_ofo_field.sh  submit_ofo_unsupervised.sh  visualize_finetuned.sbatch  yolo_boxes.sbatch
tests/: conftest.py  test_TreeBoxes.py  test_TreePoints.py  test_TreePolygons.py  test_milliontrees.py  test_release.py  test_unsupervised_download.py  test_versions.py
training/: TRAINING_PLAN.md
training/boxes_dome_detr/: README.md  activate_dome_env.sh  build_env.sh  convert_to_coco.py  eval.py  pyproject.toml  train.py
training/boxes_dome_detr/configs/: dome_m_milliontrees.yml  milliontrees_dataset.yml
weights/: DeepForest.py  deepforest_config.yml
(+140 files in other folders)
