[build-system]
requires = ["setuptools>=61", "setuptools-scm[toml]>=6.2.3"]
build-backend = "setuptools.build_meta"

[project]
name = "milliontrees"
version = "0.11.0"
description = "Benchmark dataset for Airborne Tree Machine Learning"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
classifiers = [
    "Development Status :: 6 - Mature",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

authors = [
    { name = "Ben Weinstein", email = "benweinstein@weecology.org" },
    { name = "Henry Senyondo", email = "henrykironde@gmail.com" },
    { name = "Ethan White", email = "ethan@weecology.org" },
]

urls.Documentation = "http://milliontrees.readthedocs.io/en/latest/"
urls.Source = "https://github.com/Weecology/MillionTrees"
urls.Contributors = "https://github.com/Weecology/MillionTrees/graphs/contributors"

dependencies = [
    "numpy",
    "pandas",
    "pillow",
    "matplotlib",
    "torch",
    "torchvision",
    "tqdm",
    "scikit-learn",
    "shapely",
    "torchmetrics[detection]",
    "faster-coco-eval",
    'albumentations',
    "pyarrow>=17.0.0",
    "datasets",
]

[project.optional-dependencies]
# docs stays an installable extra because ReadTheDocs (.readthedocs.yaml) pulls it
# via pip extra_requirements, and it has no direct-URL deps to break PyPI uploads.
docs = [
    "sphinx",
    "furo",
    "sphinx_markdown_tables",
    "myst_parser",
    "sphinx_rtd_theme",
    "sphinx-design",
    "nbmake",
    "nbsphinx",
    "nbqa",
]

# PEP 735 dependency groups are never written into the published wheel/sdist
# metadata, so the deepforest git+https refs below stay out of the PyPI upload
# and `pip install milliontrees` users don't pull the dev/analysis stack.
[dependency-groups]
dev = [
    "pytest",
    "bumpversion",
    "pre-commit",
    "yapf",
    "docformatter",
    "black",
    "flake8",
    "label-studio-sdk",
    "paramiko",
    "python-dotenv",
    "outdated",
    "build",
    "twine",
    "deepforest @ git+https://github.com/weecology/DeepForest.git@main",
    "geopandas",
    "rasterio",
    "scikit-image",
    "requests",
    "neonutilities",
    "dask[diagnostics]",
    "transformers>=5.0.0rc1",
    "accelerate",
    "safetensors",
    "huggingface-hub>=1.5.0,<2.0",
    "tokenizers>=0.20.0",
    "opencv-python",
    "comet-ml>=3.44.4",
]
# TreeFormer point training (DeepForest treeformer-training branch until merged to main).
treeformer = [
    "deepforest @ git+https://github.com/jveitchmichaelis/DeepForest.git@treeformer-training",
    "geopandas",
    "comet-ml>=3.44.4",
]
# Polygon Mask R-CNN training (DeepForest polygon-maskrcnn-workflow branch until merged).
# NOTE: this branch and treeformer-training are distinct branches of the same
# package, so only one DeepForest can be installed in a venv at a time. The
# [tool.uv.sources] entry below selects which one `uv sync` installs; it is set
# to the polygon branch for this workflow.
polygon = [
    "deepforest @ git+https://github.com/jveitchmichaelis/DeepForest.git@cursor/polygon-maskrcnn-workflow",
    "geopandas",
    "comet-ml>=3.44.4",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages.find = {where = ["src"], include = ["milliontrees*"]}

[tool.uv.sources]
# The two DeepForest forks (treeformer-training for points, polygon-maskrcnn-workflow
# for polygons) are the same package, so only one can be installed in .venv at a time
# and this pin selects which. Currently set to treeformer-training for the POINT
# workflow. Switch back to "cursor/polygon-maskrcnn-workflow" before running polygon
# jobs off the shared .venv (uv sync after flipping).
deepforest = { git = "https://github.com/jveitchmichaelis/DeepForest.git", branch = "treeformer-training" }
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
