[project]
name = "milliontrees-canopyrs"
version = "0.1.0"
description = "CanopyRS DINO Swin-L (SelvaBox) and DINO + SAM3 (SelvaMask) baselines on MillionTrees"
requires-python = ">=3.10,<3.11"
dependencies = [
    "milliontrees",
    "transformers>=5.0.0rc1",
    "huggingface-hub>=1.0.0",
    "comet-ml>=3.44.4",
]

[tool.uv.sources]
milliontrees = { path = "../..", editable = true }

# NOTE: CanopyRS itself, plus detrex (DINO's ms_deform_attn CUDA op) and Detectron2,
# are compiled from source against the installed torch and are kept OUT of this file
# on purpose (uv/pip cannot resolve them). The pinned, reproducible build env lives
# in detrex.toml. Build that first (see build_env.sh / README.md), then run
# `uv pip install -e .` here to add milliontrees + SAM 3 transformers on top.
